  * The fasta2select now always assumes that the gap character in a sequence
    is "-" (Issue #2448, PR #2457)
  * Removed core.flags.  Default behaviour (eg pbc, units) now defaults to
    the default setting of the flag before removal.  If you were using flags
    you will now have to supply the flag setting as keyword arguments to
    function calls. (Issue #782)

Deprecations
  * analysis.hole is deprecated in 1.0 (remove in 2.0)
  * analysis.hbonds.HydrogenBondAnalysis is deprecated in 1.0 (remove in 2.0)
  * analysis.density.density_from_Universe() (remove in 2.0)
  * analysis.density.notwithin_coordinates_factory() (remove in 2.0)
  * analysis.density.density_from_PDB and BfactorDensityCreator (remove in 2.0)
  * Writer.write_next_timestep is deprecated, use write() instead (remove in 2.0)
  * Writer.write(Timestep) is deprecated, use either a Universe or AtomGroup

09/05/19 IAlibay, richardjgowers

  * 0.20.1

Fixes
  * The NetCDF writer now writes `cell_angle` units as `degree` instead of
    `degrees` in accordance with the AMBER NetCDF convention (Issue #2327).
  * Fixed installation without Cython (Issue #2337)


08/28/19 micaela-matta, xiki-tempula, zemanj, mattwthompson, orbeckst, aliehlen,
         dpadula85, jbarnoud, manuel.nuno.melo, richardjgowers, mattwthompson,
         ayushsuhane, picocentauri, NinadBhat, bieniekmateusz, p-j-smith, Lp0lp,
         IAlibay, tyler.je.reddy, aakognole, RMeli, lilyminium

  * 0.20.0

Enhancements
  * improved metal atom guess (Issue #2323)
  * improved atom element guessing in topology.guessers to check for elements
    after the first element (#2313)
  * added the zero-based index selection keyword (Issue #1959)
  * added position averaging transformation that makes use of the
    transformations API (PR #2208)
  * added find_hydrogen_donors to analysis.bonds.hbond_autocorrel to
    automatically determine donors where possible (#2181)
  * added analysis.polymer.sort_backbone to rearrange backbone atoms into